--- a/addadmin.html
+++ b/addadmin.html
@@ -126,7 +126,7 @@ span.psw {
 </head>
 <body>
 
-<h2>Add New Admin</h2>
+<h2>Login</h2>
 
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
 
