--- a/addadmin.html
+++ b/addadmin.html
@@ -3,13 +3,15 @@
 
 <h1>Add admin</h1>
 
-<p>The formaction attribute specifies the URL of a file that will process the input when the form is submitted.</p>
+
 
 <form action="/action_page.php">
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <label for="lname">Last name:</label>
   <input type="text" id="lname" name="lname"><br><br>
+  <label for="lname">Number phone:</label>
+  <input type="text" id="nphone" name="nphone"><br><br>
   <input type="submit" value="Submit">
   <input type="submit" formaction="/action_page2.php" value="Submit as Admin">
 </form>
