--- a/resetpassword.html
+++ b/resetpassword.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 
 <html lang="en">
 
@@ -18,13 +18,13 @@
 
     <div class="form-container">
 
-        <h2>Forgot Password</h2>
+        <h2>Reset Password</h2>
 
         <form id="forgotPasswordForm">
 
-            <label for="email">Enter your email:</label>
+            <label for="text">Enter your old password:</label>
 
-            <input type="email" id="email" name="email" placeholder="Enter your registered email" required>
+            <input type="text" id="text" name="text" placeholder="Enter your old password" required>
 
             <br>
             <br>
