--- a/resetpassword.html
+++ b/resetpassword.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 
@@ -22,13 +22,18 @@
 
         <form id="forgotPasswordForm">
 
-            <label for="text">Enter your old password:</label>
+            <label for="psw"><b>Old Password</b></label>
+            <input type="password" placeholder="Enter Old Password" name="psw" required>
+            
+            <label for="psw-repeat"><b>New Password</b></label>
+            <input type="password" placeholder=" New Password" name="psw-repeat" required>
 
-            <input type="text" id="text" name="text" placeholder="Enter your old password" required>
-
+            <label for="psw-repeat"><b>Repeat New Password</b></label>
+            <input type="password" placeholder="Repeat New Password" name="psw-repeat" required>
+            
             <br>
             <br>
-            <button type="submit">Send</button>
+            <button type="submit">Confirm</button>
 
         </form>
 
