--- a/resetpassword.html
+++ b/resetpassword.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Forgot Password</title>
-
-    <link rel="stylesheet" href="forgotpassword.css">
-
+    <title>Reset Password</title>
+    <link rel="stylesheet" href="resetpassword.css">
 </head>
 
 <body>
 
     <div class="form-container">
-
+        <br>
+        <br>
+        <br>
+        <br>
         <h2>Reset Password</h2>
 
         <form id="forgotPasswordForm">
 
-            <label for="psw"><b>Old Password</b></label>
-            <input type="password" placeholder="Enter Old Password" name="psw" required>
-            
-            <label for="psw-repeat"><b>New Password</b></label>
-            <input type="password" placeholder=" New Password" name="psw-repeat" required>
+            <label for="oldPassword"><b>Old Password</b></label>
+            <input type="password" placeholder="Enter Old Password" id="oldPassword" name="psw" required>
+            <label class="checkbox-label">
+                <input type="checkbox" id="showOldPassword" onclick="togglePasswordVisibility('oldPassword')"> Show Password
+            </label>
 
-            <label for="psw-repeat"><b>Repeat New Password</b></label>
-            <input type="password" placeholder="Repeat New Password" name="psw-repeat" required>
-            
-            <br>
-            <br>
+            <br><br>
+
+            <label for="newPassword"><b>New Password</b></label>
+            <input type="password" placeholder="New Password" id="newPassword" name="psw-repeat" required>
+            <label class="checkbox-label">
+                <input type="checkbox" id="showNewPassword" onclick="togglePasswordVisibility('newPassword')"> Show Password
+            </label>
+
+            <br><br>
+
+            <label for="repeatNewPassword"><b>Repeat New Password</b></label>
+            <input type="password" placeholder="Repeat New Password" id="repeatNewPassword" name="psw-repeat" required>
+            <label class="checkbox-label">
+                <input type="checkbox" id="showRepeatNewPassword" onclick="togglePasswordVisibility('repeatNewPassword')"> Show Password
+            </label>
+
+            <br><br>
             <button type="submit">Confirm</button>
 
         </form>
@@ -41,7 +50,16 @@
 
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        function togglePasswordVisibility(inputId) {
+            const inputField = document.getElementById(inputId);
+            if (inputField.type === "password") {
+                inputField.type = "text";
+            } else {
+                inputField.type = "password";
+            }
+        }
+    </script>
 
 </body>
 
