--- a/admindashboard.html
+++ b/admindashboard.html
@@ -17,8 +17,8 @@
 	<!-- SIDEBAR -->
 	<section id="sidebar">
 		<a href="#" class="brand">
-			<i class='bx bxs-smile'></i>
-			<span class="text">Admin</span>
+			<br>
+			<span class="text">Admin Dashboard</span>
 		</a>
 		<ul class="side-menu top">
 			<li class="active">
