--- a/addadmin.html
+++ b/addadmin.html
@@ -2,8 +2,23 @@
 <html>
 <head>
     <style>
-        body {font-family: Arial, Helvetica, sans-serif;}
-        * {box-sizing: border-box}
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f8d7da; /* Light red background */
+            color: #333; /* Dark text for readability */
+            margin: 0;
+            padding: 0;
+        }
+        * { box-sizing: border-box; }
+
+        /* Title for the gaming store */
+        .store-title {
+            text-align: center;
+            font-size: 2.5em;
+            color: #c0392b; /* Darker red for the title */
+            margin-top: 50px;
+            margin-bottom: 20px;
+        }
 
         /* Full-width input fields */
         input[type=text], input[type=password] {
@@ -12,11 +27,13 @@
             margin: 5px 0 22px 0;
             display: inline-block;
             border: none;
-            background: #f1f1f1;
+            background: rgba(255, 255, 255, 0.9); /* Light background for inputs */
+            color: #333; /* Dark text for readability */
+            border-radius: 5px;
         }
 
         input[type=text]:focus, input[type=password]:focus {
-            background-color: #ddd;
+            background-color: rgba(255, 255, 255, 1);
             outline: none;
         }
 
@@ -27,7 +44,7 @@
 
         /* Set a style for all buttons */
         button {
-            background-color: #04AA6D;
+            background-color: #e74c3c; /* Light red */
             color: white;
             padding: 14px 20px;
             margin: 8px 0;
@@ -35,16 +52,17 @@
             cursor: pointer;
             width: 100%;
             opacity: 0.9;
+            border-radius: 5px;
         }
 
         button:hover {
-            opacity:1;
+            opacity: 1;
+            background-color: #c0392b; /* Darker red on hover */
         }
 
         /* Extra styles for the cancel button */
         .cancelbtn {
-            padding: 14px 20px;
-            background-color: #f44336;
+            background-color: #f44336; /* Red */
         }
 
         /* Float cancel and signup buttons and add an equal width */
@@ -56,6 +74,12 @@
         /* Add padding to container elements */
         .container {
             padding: 16px;
+            background: rgba(255, 255, 255, 0.8); /* Semi-transparent background for the form */
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            max-width: 400px; /* Limit the width for better appearance */
+            margin: auto; /* Center the form */
+            margin-top: 20px; /* Space from the top */
         }
 
         /* Clear floats */
@@ -75,41 +99,41 @@
 </head>
 <body>
 
-<form action="/action_page.php" style="border:1px solid #ccc">
-    <div class="container">
-        <h1>Sign Up</h1>
-        <p>Please fill in this form to create an account.</p>
-        <hr>
+    <div class="store-title">Gaming Store</div>
 
-        <label for="email"><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="email" required>
+    <form action="/action_page.php" style="border:1px solid #ccc">
+        <div class="container">
+            <h1>Sign Up (Admin)</h1>
+            <p>Please fill in this form to create an account.</p>
+            <hr>
 
-        <label for="psw"><b>Password</b></label>
-        <input type="password" id="psw" placeholder="Enter Password" name="psw" required>
-        <label>
-            <input type="checkbox" id="show-password" onclick="togglePassword()"> Show Password
-        </label>
-        <br>
-        <br>
-        <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input type="password" id="psw-repeat" placeholder="Repeat Password" name="psw-repeat" required>
-        <label>
-            <input type="checkbox" id="show-password-repeat" onclick="togglePasswordRepeat()"> Show Password
-        </label>
-        <br>
-        <br>
-        <label>
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="email" required>
+
+            <label for="psw"><b>Password</b></label>
+            <input type="password" id="psw" placeholder="Enter Password" name="psw" required>
+            <label>
+                <input type="checkbox" id="show-password" onclick="togglePassword()"> Show Password
+            </label>
+            <br>
+            <br>
+            <label for="psw-repeat"><b>Repeat Password</b></label>
+            <input type="password" id="psw-repeat" placeholder="Repeat Password" name="psw-repeat" required>
+            <label>
+                <input type="checkbox" id="show-password-repeat" onclick="togglePasswordRepeat()"> Show Password
+            </label>
+            <br>
+            <br>
             <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-        </label>
-        
-        <div class="clearfix">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <button type="submit" class="signupbtn">Sign Up</button>
-        </div>
-    </div>
-</form>
-
-<script>
+          </label>
+          
+          <div class="clearfix">
+              <button type="button" class="cancelbtn">Cancel</button>
+              <button type="submit" class="signupbtn">Sign Up</button>
+          </div>
+      </div>
+  </form>
+  <script>
     function togglePassword() {
         const passwordField = document.getElementById('psw');
         const type = passwordField.getAttribute('type') === 'password' ? 'text' : 'password';
