--- a/manageproduct.html
+++ b/manageproduct.html
@@ -5,6 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Management - Gaming Store Admin</title>
     <link rel="stylesheet" href="manageproduct.css">
+    <style>
+        /* Add some basic styles for the table */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #c0392b; /* Dark Red */
+            color: white;
+        }
+
+        img {
+            width: 50px; /* Set a fixed width for images */
+            height: auto; /* Maintain aspect ratio */
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -18,6 +41,7 @@
                 <table>
                     <thead>
                         <tr>
+                            <th>Image</th> <!-- New Image Column -->
                             <th>Product Name</th>
                             <th>Category</th>
                             <th>Price (RM)</th>
@@ -27,6 +51,7 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td><img src="images/gaming-mouse.jpg" alt="Gaming Mouse"></td> <!-- Image for Gaming Mouse -->
                             <td>Gaming Mouse</td>
                             <td>Accessories</td>
                             <td>RM 49.99</td>
@@ -37,6 +62,7 @@
                             </td>
                         </tr>
                         <tr>
+                            <td><img src="images/mechanical-keyboard.jpg" alt="Mechanical Keyboard"></td> <!-- Image for Mechanical Keyboard -->
                             <td>Mechanical Keyboard</td>
                             <td>Accessories</td>
                             <td>RM 89.99</td>
@@ -47,6 +73,7 @@
                             </td>
                         </tr>
                         <tr>
+                            <td><img src="images/gaming-headset.jpg" alt="Gaming Headset"></td> <!-- Image for Gaming Headset -->
                             <td>Gaming Headset</td>
                             <td>Accessories</td>
                             <td>RM 69.99</td>
@@ -57,6 +84,7 @@
                             </td>
                         </tr>
                         <tr>
+                            <td><img src="images/game-controller.jpg" alt="Game Controller"></td> <!-- Image for Game Controller -->
                             <td>Game Controller</td>
                             <td>Consoles</td>
                             <td>RM 39.99</td>
