--- a/manageproduct.html
+++ b/manageproduct.html
@@ -51,7 +51,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="images/gaming-mouse.jpg" alt="Gaming Mouse"></td> <!-- Image for Gaming Mouse -->
+                            <td><img src="image/gamingmouse.jpg" alt="Gaming Mouse"></td> <!-- Image for Gaming Mouse -->
                             <td>Gaming Mouse</td>
                             <td>Accessories</td>
                             <td>RM 49.99</td>
