--- a/manageproduct.html
+++ b/manageproduct.html
@@ -62,7 +62,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><img src="images/mechanical-keyboard.jpg" alt="Mechanical Keyboard"></td> <!-- Image for Mechanical Keyboard -->
+                            <td><img src="image/gamingkeyboard.jpg" alt="Mechanical Keyboard"></td> <!-- Image for Mechanical Keyboard -->
                             <td>Mechanical Keyboard</td>
                             <td>Accessories</td>
                             <td>RM 89.99</td>
@@ -73,7 +73,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><img src="images/gaming-headset.jpg" alt="Gaming Headset"></td> <!-- Image for Gaming Headset -->
+                            <td><img src="image/gamingheadset.jpg" alt="Gaming Headset"></td> <!-- Image for Gaming Headset -->
                             <td>Gaming Headset</td>
                             <td>Accessories</td>
                             <td>RM 69.99</td>
@@ -84,7 +84,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><img src="images/game-controller.jpg" alt="Game Controller"></td> <!-- Image for Game Controller -->
+                            <td><img src="image/gamingcontroller.jpg" alt="Game Controller"></td> <!-- Image for Game Controller -->
                             <td>Game Controller</td>
                             <td>Consoles</td>
                             <td>RM 39.99</td>
