--- a/admindashboard.html
+++ b/admindashboard.html
@@ -134,7 +134,7 @@
 				<li>
 					<i class='bx bxs-dollar-circle' ></i>
 					<span class="text">
-						<h3>$2543</h3>
+						<h3>RM 2543</h3>
 						<p>Total Sales</p>
 					</span>
 				</li>
@@ -159,26 +159,26 @@
 						<tbody>
 							<tr>
 								<td>
-									<img src="img/people.png">
-									<p>Khairul Iman</p>
+									<img src="image/people1.jpg">
+									<p>Kevin</p>
 								</td>
 								<td>01-01-2025</td>
 								<td><span class="status completed">Completed</span></td>
 							</tr>
 							<tr>
 								<td>
-									<img src="img/people.png">
-									<p>Wan Irfan Iman</p>
+									<img src="image/people2.jpg">
+									<p>Brian</p>
 								</td>
 								<td>06-01-2025</td>
 								<td><span class="status pending">Pending</span></td>
 							</tr>
 							<tr>
 								<td>
-									<img src="img/people.png">
-									<p>Adlina Nazrul Muhaimin</p>
+									<img src="image/woman1.jpg">
+									<p>Camila</p>
 								</td>
-								<td>01-02-2025</td>
+								<td>07-02-2025</td>
 								<td><span class="status process">Process</span></td>
 							</tr>
 				
