--- a/managestaff.html
+++ b/managestaff.html
@@ -22,7 +22,9 @@
                 <input type="text" id="position" required><br>
                 <label for="salary">Salary:</label>
                 <input type="number" id="salary" required><br>
-                <button type="submit">Add Employee</button>
+                <label for="image">Image:</label>
+                <input type="file" id="image" required><br>
+                <button type="submit">Add Staff</button>
             </form>
         </section>
 
@@ -35,13 +37,55 @@
                         <th>Name</th>
                         <th>Position</th>
                         <th>Salary</th>
+                        <th>Image</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody id="employeeTable">
-                    <!-- Staff data will be inserted here -->
+                    <tr>
+                        <td>1</td>
+                        <td>Adlina Nazrul Muhaimin</td>
+                        <td>Manager</td>
+                        <td>RM 5000</td>
+                        <td><img src="image/adlina.jpg" alt="Adlina" width="50"></td>
+                        <td>
+                            <button>Edit</button>
+                            <button>Delete</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Khairul Iman</td>
+                        <td>Developer</td>
+                        <td>RM 4000</td>
+                        <td><img src="image/khai.jpg" alt="Khairul" width="50"></td>
+                        <td>
+                            <button>Edit</button>
+                            <button>Delete</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Wan Irfan Iman</td>
+                        <td>Designer</td>
+                        <td>RM 4000</td>
+                        <td><img src="image/irfan.jpg" alt="Wan Irfan" width="50"></td>
+                        <td>
+                            <button>Edit</button>
+                            <button>Delete</button>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
+        </section>
+
+        <section id="admin-list">
+            <h2>Admin List</h2>
+            <ul>
+                <li>Adlina Nazrul Muhaimin</li>
+                <li>Khairul Iman</li>
+                <li>Wan Irfan Iman</li>
+            </ul>
         </section>
     </div>
 
