--- a/managestaff.html
+++ b/managestaff.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="managestaff.css">
 </head>
 <body>
+    <h1></h1>
+    <center><button class="back-button">Back to Dashboard</button></center>
     <div class="container">
         <h1>Staff Management System</h1>
         
