--- a/custeditprofile.html
+++ b/custeditprofile.html
@@ -152,7 +152,7 @@
         <main>
             <form>
                 <div class="profile-picture">
-                    <img src="profile.jpg" alt="Profile Picture" id="profile-img">
+                    <img src="" alt="Profile Picture" id="profile-img">
                     <input type="file" id="profile-pic" name="profile-pic" accept="image/*" onchange="loadFile(event)">
                     <label for="profile-pic">Change Picture</label>
                 </div>
