--- a/admindashboard.html
+++ b/admindashboard.html
@@ -90,7 +90,7 @@
 				<span class="num">8</span>
 			</a>
 			<a href="#" class="profile">
-				<img src="img/people.png">
+				<img src="image/adlina.jpg">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
@@ -187,7 +187,7 @@
 				</div>
 				<div class="todo">
 					<div class="head">
-						<h3>Todos</h3>
+						<h3>To do </h3>
 						<i class='bx bx-plus' ></i>
 						<i class='bx bx-filter' ></i>
 					</div>
