--- a/customermanagement.html
+++ b/customermanagement.html
@@ -99,7 +99,7 @@
         </section>
 
         <section id="admin-list">
-            <h2>Admin List</h2>
+            <h2>Member List</h2>
             <ul>
                 <li>John Doe</li>
                 <li>Jane Smith</li>
