--- a/manageproduct.html
+++ b/manageproduct.html
@@ -46,6 +46,7 @@
                             <th>Category</th>
                             <th>Price (RM)</th>
                             <th>Stock</th>
+                            <th>Colors</th> <!-- New Colors Column -->
                             <th>Actions</th>
                         </tr>
                     </thead>
@@ -56,6 +57,7 @@
                             <td>Accessories</td>
                             <td>RM 49.99</td>
                             <td>75</td>
+                            <td>Black, Red</td> <!-- Colors for Gaming Mouse -->
                             <td>
                                 <button>Edit</button>
                                 <button>Delete</button>
@@ -67,6 +69,7 @@
                             <td>Accessories</td>
                             <td>RM 89.99</td>
                             <td>50</td>
+                            <td>Black, White</td> <!-- Colors for Mechanical Keyboard -->
                             <td>
                                 <button>Edit</button>
                                 <button>Delete</button>
@@ -78,6 +81,7 @@
                             <td>Accessories</td>
                             <td>RM 69.99</td>
                             <td>30</td>
+                            <td>Black, Blue</td> <!-- Colors for Gaming Headset -->
                             <td>
                                 <button>Edit</button>
                                 <button>Delete</button>
@@ -89,6 +93,7 @@
                             <td>Consoles</td>
                             <td>RM 39.99</td>
                             <td>100</td>
+                            <td>Black, White</td> <!-- Colors for Game Controller -->
                             <td>
                                 <button>Edit</button>
                                 <button>Delete</button>
