--- a/order.html
+++ b/order.html
@@ -37,8 +37,8 @@
                             <td>2</td>
                             <td>RM 99.98</td>
                             <td>
-                                <a class="action-button" href="#"><i class="fas fa-pencil-alt"></i></a>
-                                <a class="action-button" href="#"><i class="fas fa-trash-alt"></i></a>
+                                <button>Edit</button>
+                                <button>Delete</button>
                             </td>
                         </tr>
                         <tr>
@@ -47,8 +47,8 @@
                             <td>1</td>
                             <td>RM 89.99</td>
                             <td>
-                                <a class="action-button" href="#"><i class="fas fa-pencil-alt"></i></a>
-                                <a class="action-button" href="#"><i class="fas fa-trash-alt"></i></a>
+                                <button>Edit</button>
+                                <button>Delete</button>
                             </td>
                         </tr>
                         <tr>
@@ -57,8 +57,8 @@
                             <td>3</td>
                             <td>RM 209.97</td>
                             <td>
-                                <a class="action-button" href="#"><i class="fas fa-pencil-alt"></i></a>
-                                <a class="action-button" href="#"><i class="fas fa-trash-alt"></i></a>
+                                <button>Edit</button>
+                                <button>Delete</button>
                             </td>
                         </tr>
                         <tr>
@@ -67,8 +67,8 @@
                             <td>4</td>
                             <td>RM 159.96</td>
                             <td>
-                                <a class="action-button" href="#"><i class="fas fa-pencil-alt"></i></a>
-                                <a class="action-button" href="#"><i class="fas fa-trash-alt"></i></a>
+                                <button>Edit</button>
+                                <button>Delete</button>
                             </td>
                         </tr>
                     </tbody>
