--- a/order.html
+++ b/order.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="order.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Order Management System</title>
+    <style>
+        img {
+            width: 50px;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -23,49 +29,59 @@
                 <table>
                     <thead>
                         <tr>
+                            <th>Picture</th>
                             <th>Order Item</th>
                             <th>Item Price (RM)</th>
                             <th>Item Quantity</th>
                             <th>Total Cost (RM)</th>
+                            <th>Color</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
+                            <td><img src="image/gamingmouse.jpg" alt="Gaming Mouse"></td>
                             <td>Gaming Mouse</td>
                             <td>RM 49.99</td>
                             <td>2</td>
                             <td>RM 99.98</td>
+                            <td>Black</td>
                             <td>
                                 <button>Edit</button>
                                 <button>Delete</button>
                             </td>
                         </tr>
                         <tr>
+                            <td><img src="image/gamingkeyboard.jpg" alt="Mechanical Keyboard"></td>
                             <td>Mechanical Keyboard</td>
                             <td>RM 89.99</td>
                             <td>1</td>
                             <td>RM 89.99</td>
+                            <td>White</td>
                             <td>
                                 <button>Edit</button>
                                 <button>Delete</button>
                             </td>
                         </tr>
                         <tr>
+                            <td><img src="image/gamingheadset.jpg" alt="Gaming Headset"></td>
                             <td>Gaming Headset</td>
                             <td>RM 69.99</td>
                             <td>3</td>
                             <td>RM 209.97</td>
+                            <td>Blue</td>
                             <td>
                                 <button>Edit</button>
                                 <button>Delete</button>
                             </td>
                         </tr>
                         <tr>
+                            <td><img src="image/gamingcontroller.jpg" alt="Game Controller"></td>
                             <td>Game Controller</td>
                             <td>RM 39.99</td>
                             <td>4</td>
                             <td>RM 159.96</td>
+                            <td>White</td>
                             <td>
                                 <button>Edit</button>
                                 <button>Delete</button>
@@ -77,7 +93,7 @@
         </main>
         
         <footer>
-            <p>&copy;  Gaming Store</p>
+            <p>&copy; Gaming Store</p>
         </footer>
     </div>
 
