--- a/addadmin.html
+++ b/addadmin.html
@@ -100,8 +100,8 @@
 <body>
 
     <div class="store-title">Gaming Store</div>
+    <form action="signup_admin.php" method="post" style="border:1px solid #ccc">
 
-    <form action="/action_page.php" style="border:1px solid #ccc">
         <div class="container">
             <h1>Sign Up (Admin)</h1>
             <p>Please fill in this form to create an account.</p>
@@ -109,6 +109,9 @@
 
             <label for="email"><b>Email</b></label>
             <input type="text" placeholder="Enter Email" name="email" required>
+
+            <label for="username"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="username" required>
 
             <label for="psw"><b>Password</b></label>
             <input type="password" id="psw" placeholder="Enter Password" name="psw" required>
