--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
                 <a href="#vr">VR</a>
             </div>
             <div class="icons-right">
-                <i class="fas fa-user"></i>
+                <a href="custlogin.html">
+                    <i class="fas fa-user"></i>
+                </a>
                 <i class="fas fa-shopping-cart"></i>
             </div>
         </nav>
