--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
             border-top: 1px solid white;
             padding-top: 10px;
         }
+        .icons-right a {
+    text-decoration: none; /* Removes underline */
+    color: inherit; /* Keeps the original color */
+    
+    }
+    .icons-right a:visited, 
+    .icons-right a:focus, 
+    .icons-right a:hover {
+    color: inherit; /* Ensures it doesn't turn blue */
+    }
+
     </style>
 </head>
 <body>
