--- a/menu.html
+++ b/menu.html
@@ -22,6 +22,9 @@
             height: 100vh;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
         .menu .close-icon {
             position: absolute;
@@ -39,6 +42,7 @@
             list-style: none;
             padding: 0;
             margin: 0;
+            flex-grow: 1; /* Allows the menu items to take up space */
         }
         .menu li {
             padding: 15px 0;
@@ -75,6 +79,9 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+        .menu li:last-child {
+            margin-top: auto; /* Push the login link to the bottom */
+        }
     </style>
 </head>
 <body>
@@ -96,6 +103,7 @@
             </li>
             <li><a href="#order-history">Order History</a></li>
             <li><a href="#need-help">Need Help</a></li>
+            <li><a href="loginadmin.html">Login Admin</a></li>
         </ul>
     </div>
 </body>
