--- a/loginadmin.html
+++ b/loginadmin.html
@@ -68,7 +68,7 @@ span.psw {
 </style>
 </head>
 <body>
-
+  <center><h1>Gaming Store</h1></center>
 <center><h2>Login Form</h2></center>
 
 <form action="/action_page.php" method="post">
@@ -96,6 +96,11 @@ span.psw {
   </div>
 </form>
 
+<!-- Add the Sign-Up Link -->
+<div class="container" style="text-align: center; margin-top: 20px;">
+    <p>Don't have an account? <a href="addadmin.html">Create one here</a></p>
+</div>
+
 <script>
   function togglePassword() {
     var passwordInput = document.getElementById("password");
@@ -106,5 +111,6 @@ span.psw {
     }
   }
 </script>
+
 </body>
 </html>
