--- a/addadmin.html
+++ b/addadmin.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up - Admin</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -101,7 +104,6 @@
 
     <div class="store-title">Gaming Store</div>
     <form action="signup_admin.php" method="post" style="border:1px solid #ccc">
-
         <div class="container">
             <h1>Sign Up (Admin)</h1>
             <p>Please fill in this form to create an account.</p>
@@ -118,37 +120,37 @@
             <label>
                 <input type="checkbox" id="show-password" onclick="togglePassword()"> Show Password
             </label>
-            <br>
-            <br>
+            <br><br>
+
             <label for="psw-repeat"><b>Repeat Password</b></label>
             <input type="password" id="psw-repeat" placeholder="Repeat Password" name="psw-repeat" required>
             <label>
                 <input type="checkbox" id="show-password-repeat" onclick="togglePasswordRepeat()"> Show Password
             </label>
-            <br>
-            <br>
-            <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-          </label>
-          
-          <div class="clearfix">
-              <button type="button" class="cancelbtn">Cancel</button>
-              <button type="submit" class="signupbtn">Sign Up</button>
-          </div>
-      </div>
-  </form>
-  <script>
-    function togglePassword() {
-        const passwordField = document.getElementById('psw');
-        const type = passwordField.getAttribute('type') === 'password' ? 'text' : 'password';
-        passwordField.setAttribute('type', type);
-    }
+            <br><br>
 
-    function togglePasswordRepeat() {
-        const passwordFieldRepeat = document.getElementById('psw-repeat');
-        const type = passwordFieldRepeat.getAttribute('type') === 'password' ? 'text' : 'password';
-        passwordFieldRepeat.setAttribute('type', type);
-    }
-</script>
+            <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+          
+            <div class="clearfix">
+                <button type="button" class="cancelbtn">Cancel</button>
+                <button type="submit" class="signupbtn">Sign Up</button>
+            </div>
+        </div>
+    </form>
+
+    <script>
+        function togglePassword() {
+            const passwordField = document.getElementById('psw');
+            const type = passwordField.getAttribute('type') === 'password' ? 'text' : 'password';
+            passwordField.setAttribute('type', type);
+        }
+
+        function togglePasswordRepeat() {
+            const passwordFieldRepeat = document.getElementById('psw-repeat');
+            const type = passwordFieldRepeat.getAttribute('type') === 'password' ? 'text' : 'password';
+            passwordFieldRepeat.setAttribute('type', type);
+        }
+    </script>
 
 </body>
 </html>
