--- a/loginadmin.html
+++ b/loginadmin.html
@@ -96,6 +96,9 @@ span.psw {
   </div>
 </form>
 
+<form action="login_admin.php" method="post">
+
+
 <!-- Add the Sign-Up Link -->
 <div class="container" style="text-align: center; margin-top: 20px;">
     <p>Don't have an account? <a href="addadmin.html">Create one here</a></p>
