--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> User Reset Password</title>
+    <title>Contact Us</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&family=Source+Serif+Pro:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -12,10 +12,6 @@
             color: black;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
         }
         header {
             background: linear-gradient(45deg, red, darkred);
@@ -23,7 +19,6 @@
             padding: 20px;
             text-align: center;
             border-bottom: 5px solid black;
-            border-radius: 15px 15px 0 0;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         h1, h2, h3 {
@@ -31,6 +26,43 @@
         }
         p {
             font-family: 'Source Serif Pro', serif;
+        }
+        .container {
+            padding: 20px;
+        }
+        .map {
+            width: 100%;
+            height: 400px;
+            margin-bottom: 20px;
+        }
+        .form-container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 15px;
+            background-color: #f9f9f9;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            font-family: 'Source Sans Pro', sans-serif;
+            margin-bottom: 5px;
+        }
+        .form-group input, .form-group textarea {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 15px;
+            font-family: 'Source Serif Pro', serif;
+            transition: border-color 0.3s ease;
+        }
+        .form-group input:focus, .form-group textarea:focus {
+            border-color: red;
+            outline: none;
         }
         .button {
             font-family: 'Source Sans Pro', sans-serif;
@@ -45,60 +77,33 @@
         .button:hover {
             background-color: darkred;
         }
-        .form-container {
-            max-width: 400px;
-            width: 100%;
-            margin: 20px;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 15px;
-            background-color: #f9f9f9;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-        .form-container:hover {
-            transform: translateY(-5px);
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            font-family: 'Source Sans Pro', sans-serif;
-            margin-bottom: 5px;
-        }
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 15px;
-            font-family: 'Source Serif Pro', serif;
-            transition: border-color 0.3s ease;
-        }
-        .form-group input:focus {
-            border-color: red;
-            outline: none;
-        }
     </style>
 </head>
 <body>
-    <div class="form-container">
-        <header>
-            <h1>User Reset Password</h1>
-        </header>
-        <main>
+    <header>
+        <h1>Contact Us</h1>
+    </header>
+    <div class="container">
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019287374839!2d144.9630579153168!3d-37.81410797975195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf577d8b1f8b1f8b1!2sFederation%20Square!5e0!3m2!1sen!2sau!4v1611810191234!5m2!1sen!2sau" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+        <div class="form-container">
             <form>
                 <div class="form-group">
-                    <label for="new-password">New Password</label>
-                    <input type="password" id="new-password" name="new-password" required>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
                 </div>
                 <div class="form-group">
-                    <label for="confirm-password">Confirm New Password</label>
-                    <input type="password" id="confirm-password" name="confirm-password" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
                 </div>
-                <button type="submit" class="button">Reset Password</button>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="button">Send Message</button>
             </form>
-        </main>
+        </div>
     </div>
 </body>
 </html>
