--- a/custlogin.html
+++ b/custlogin.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,10 +12,9 @@
             color: black;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
         header {
             background: linear-gradient(45deg, red, darkred);
@@ -24,7 +22,6 @@
             padding: 20px;
             text-align: center;
             border-bottom: 5px solid black;
-            border-radius: 15px 15px 0 0;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         h1, h2, h3 {
@@ -47,18 +44,22 @@
             background-color: darkred;
         }
         .form-container {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-image: url('background.jpg'); /* Add a gaming-themed background image */
+            background-size: cover;
+            background-position: center;
+        }
+        .form-content {
             max-width: 400px;
             width: 100%;
-            margin: 20px;
             padding: 20px;
             border: 1px solid #ddd;
             border-radius: 15px;
-            background-color: #f9f9f9;
+            background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent background */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-        .form-container:hover {
-            transform: translateY(-5px);
         }
         .form-group {
             margin-bottom: 15px;
@@ -83,11 +84,11 @@
     </style>
 </head>
 <body>
+    <header>
+        <h1>Customer Login</h1>
+    </header>
     <div class="form-container">
-        <header>
-            <h1>Customer Login</h1>
-        </header>
-        <main>
+        <div class="form-content">
             <form>
                 <div class="form-group">
                     <label for="email">Email</label>
@@ -99,7 +100,9 @@
                 </div>
                 <button type="submit" class="button">Login</button>
             </form>
-        </main>
+        </div>
     </div>
 </body>
 </html>
+
+
