--- a/customer.html
+++ b/customer.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,10 +14,12 @@
             padding: 0;
         }
         header {
-            background-color: red;
-            color: white;
+            background-color:rgb(205, 8, 8);
+            color: rgb(253, 247, 247);
             padding: 20px;
             text-align: center;
+            border-bottom: 5px solid black;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         h1, h2, h3 {
             font-family: 'Source Serif Pro', serif;
@@ -55,6 +56,15 @@
         .product p {
             margin: 10px 0;
         }
+        footer {
+            background-color: #f1f1f1;
+            padding: 20px;
+            text-align: center;
+            margin-top: 20px;
+        }
+        footer p {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -65,43 +75,56 @@
         <section>
             <h2>Our Products</h2>
             <div class="product">
-                <img src="ps5.jpg" alt="PS5">
+                <img src="wan.img/ps5.jpg" alt="PS5">
                 <h3>PlayStation 5</h3>
                 <p>The latest in gaming technology.</p>
                 <button class="button">Buy Now</button>
             </div>
             <div class="product">
-                <img src="ps4.jpg" alt="PS4">
+                <img src="wan.img/ps4.jpg" alt="PS4">
                 <h3>PlayStation 4</h3>
                 <p>Experience the classics.</p>
                 <button class="button">Buy Now</button>
             </div>
             <div class="product">
-                <img src="nintendo.jpg" alt="Nintendo Switch">
+                <img src="wan.img/nintendo.jpg" alt="Nintendo Switch">
                 <h3>Nintendo Switch</h3>
                 <p>Portable and versatile gaming.</p>
                 <button class="button">Buy Now</button>
             </div>
-
             <div class="product">
-                <img src="xbox_series_x.jpg" alt="Xbox Series X">
+                <img src="wan.img/xboxseriesx.jpg" alt="Xbox Series X">
                 <h3>Xbox Series X</h3>
                 <p>Power your dreams.</p>
                 <button class="button">Buy Now</button>
             </div>
             <div class="product">
-                <img src="xbox_one.jpg" alt="Xbox One">
-                <h3>Xbox One</h3>
-                <p>All-in-one entertainment system.</p>
+                <img src="wan.img/asusrogstrixg17.jpg" alt="Asus Rog Strix G17">
+                <h3>Asus Rog Strix G17</h3>
+                <p>Compact Entertainment System.</p>
                 <button class="button">Buy Now</button>
             </div>
             <div class="product">
-                <img src="nintendo_wii.jpg" alt="Nintendo Wii">
-                <h3>Nintendo Wii</h3>
-                <p>Fun for the whole family.</p>
+                <img src="wan.img/alienaurorar16.jpg" alt="Alien Aurora R16">
+                <h3>Alien Aurora R16</h3>
+                <p>A Complete Beast.</p>
                 <button class="button">Buy Now</button>
             </div>
         </section>
+        <section>
+            <h2>About Us</h2>
+            <p>Welcome to our Gaming Store! We offer the latest and greatest in gaming technology. From consoles to accessories, we have everything you need to enhance your gaming experience.</p>
+        </section>
     </main>
+    <footer>
+        <p>&copy; 2025 Gaming Store. All rights reserved.</p>
+        <p>Contact us: info@gamingstore.com</p>
+        <p>Follow us on social media:</p>
+        <p>
+            <a href="#">Facebook</a> | 
+            <a href="#">Twitter</a> | 
+            <a href="#">Instagram</a>
+        </p>
+    </footer>
 </body>
 </html>
