--- a/test.html
+++ b/test.html
@@ -4,141 +4,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gamers Hideout</title>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&family=Source+Serif+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <title>Our Wedding</title>
     <style>
         body {
-            font-family: 'Source Serif Pro', serif;
-            background-color: white;
-            color: black;
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f8f8;
+            color: #333;
             margin: 0;
             padding: 0;
         }
         header {
-            background: linear-gradient(45deg, red, darkred);
+            background-color: #ff6f61;
             color: white;
-            padding: 20px;
+            padding: 20px 0;
             text-align: center;
-            border-bottom: 5px solid black;
-        }
-        nav {
-            display: flex;
-            justify-content: space-around;
-            background-color: #333;
-            padding: 10px;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 20px;
-            border-radius: 10px;
-            transition: background-color 0.3s ease;
-        }
-        nav a:hover {
-            background-color: darkred;
         }
         .container {
+            width: 80%;
+            margin: 0 auto;
             padding: 20px;
         }
-        .featured-products, .categories {
+        .section {
             margin-bottom: 40px;
         }
-        .featured-products h2, .categories h2 {
-            font-family: 'Source Serif Pro', serif;
-            margin-bottom: 22px;
+        .section h2 {
+            color: #ff6f61;
+            border-bottom: 2px solid #ff6f61;
+            padding-bottom: 10px;
         }
-        .product, .category {
-            display: inline-block;
-            width: 30%;
-            margin: 1.5%;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 15px;
-            text-align: center;
-            transition: transform 0.3s ease;
+        .section p {
+            line-height: 1.6;
         }
-        .product:hover, .category:hover {
-            transform: translateY(-5px);
-        }
-        .product img, .category img {
-            max-width: 100%;
-            border-radius: 15px;
-        }
-        .product h3, .category h3 {
-            margin: 10px 0;
-        }
-        .product p, .category p {
-            margin: 10px 0;
-        }
-        .button {
-            font-family: 'Source Sans Pro', sans-serif;
-            background-color: red;
+        .rsvp {
+            background-color: #ff6f61;
             color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 15px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
+            padding: 20px;
+            text-align: center;
         }
-        .button:hover {
-            background-color: darkred;
+        .rsvp a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Gamers Hideout</h1>
+        <h1>Welcome to Our Wedding</h1>
+        <p>Join us in celebrating our special day</p>
     </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Products</a>
-        <a href="#">Categories</a>
-        <a href="#">Contact</a>
-        <a href="#">Cart</a>
-    </nav>
     <div class="container">
-        <section class="featured-products">
-            <h2>Featured Products</h2>
-            <div class="product">
-                <img src="ps5.jpg" alt="PS5">
-                <h3>PlayStation 5</h3>
-                <p>The latest in gaming technology.</p>
-                <button class="button">Buy Now</button>
+        <div class="section">
+            <h2>Our Story</h2>
+            <p>Once upon a time, in a land far, far away...</p>
+        </div>
+        <div class="section">
+            <h2>Event Details</h2>
+            <p>Date: June 25, 2025</p>
+            <p>Location: Beautiful Garden, City</p>
+        </div>
+        <div class="section">
+            <h2>RSVP</h2>
+            <p>Please let us know if you can make it!</p>
+            <div class="rsvp">
+                <a href="mailto:rsvp@ourwedding.com">RSVP Now</a>
             </div>
-            <div class="product">
-                <img src="xbox_series_x.jpg" alt="Xbox Series X">
-                <h3>Xbox Series X</h3>
-                <p>Power your dreams.</p>
-                <button class="button">Buy Now</button>
-            </div>
-            <div class="product">
-                <img src="nintendo_switch.jpg" alt="Nintendo Switch">
-                <h3>Nintendo Switch</h3>
-                <p>Portable and versatile gaming.</p>
-                <button class="button">Buy Now</button>
-            </div>
-        </section>
-        <section class="categories">
-            <h2>Categories</h2>
-            <div class="category">
-                <img src="playstation.jpg" alt="PlayStation">
-                <h3>PlayStation</h3>
-                <p>Explore the latest PlayStation consoles and games.</p>
-                <button class="button">Shop Now</button>
-            </div>
-            <div class="category">
-                <img src="xbox.jpg" alt="Xbox">
-                <h3>Xbox</h3>
-                <p>Discover the world of Xbox gaming.</p>
-                <button class="button">Shop Now</button>
-            </div>
-            <div class="category">
-                <img src="nintendo.jpg" alt="Nintendo">
-                <h3>Nintendo</h3>
-                <p>Find the best Nintendo consoles and games.</p>
-                <button class="button">Shop Now</button>
-            </div>
-        </section>
+        </div>
     </div>
+    <footer>
+        <p>&copy; 2025 Our Wedding. All rights reserved.</p>
+    </footer>
 </body>
 </html>
