--- a/managestaff.html
+++ b/managestaff.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1></h1>
-    <center><button class="back-button">Back to Dashboard</button></center>
+    <center><button class="back-button" onclick="window.location.href='admindashboard.html'">Back to Dashboard</button></center>
     <div class="container">
         <h1>Admin Management System</h1>
         
