--- a/managestaff.html
+++ b/managestaff.html
@@ -21,7 +21,7 @@
                 <label for="name">Username:</label>
                 <input type="text" id="username" required><br>
                 <label for="salary">Email:</label>
-                <input type="number" id="email" required><br>
+                <input type="text" id="email" required><br>
                 <label for="position">Position:</label>
                 <input type="text" id="position" required><br>
                 <label for="salary">Salary:</label>
